fix: watch reload